--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "dev": "gulp watch"
   },
   "devDependencies": {
+    "babel-cli": "^6.24.0",
+    "babel-preset-env": "^1.2.2",
     "bootstrap-sass": "^3.3.7",
     "gulp": "^3.9.1",
     "jquery": "^3.1.0",
@@ -12,7 +14,12 @@
     "laravel-elixir-vue-2": "^0.2.0",
     "laravel-elixir-webpack-official": "^1.0.2",
     "lodash": "^4.16.2",
-    "vue": "^2.0.1",
-    "vue-resource": "^1.0.3"
+    "vue": "^2.0.1"
+  },
+  "dependencies": {
+    "axios": "^0.15.3",
+    "laravel-echo": "^1.2.3",
+    "pusher-js": "^4.0.0",
+    "vue-axios": "^2.0.1"
   }
 }
