--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "barryvdh/laravel-debugbar": "^2.3",
+        "guzzlehttp/guzzle": "^6.3",
         "laracasts/flash": "^2.0",
         "laravel/framework": "5.3.*",
         "laravelcollective/remote": "^5.3.0",
